--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=
+
+SOCKET_IO_PORT=8080
+REQUEST_TOKEN_INTERVAL=60000
+WAITING_TOKEN_TIME=10000
