--- a/.env.example
+++ b/.env.example
@@ -41,5 +41,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 JWT_SECRET=
 
 SOCKET_IO_PORT=8080
+MIX_SOCKET_IO_PORT=${SOCKET_IO_PORT}
 REQUEST_TOKEN_INTERVAL=60000
 WAITING_TOKEN_TIME=10000
