--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devDependencies": {
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "jquery-ui": "^1.12.1",
+        "laravel-mix": "^4.1.2",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.19.0",
         "sass-loader": "7.*",
