--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,16 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
 
-SOCKET_IO_PORT=8080
-MIX_SOCKET_IO_PORT=${SOCKET_IO_PORT}
+SOCKET_IO_HTTP_PORT=8080
+MIX_SOCKET_IO_HTTP_PORT=${SOCKET_IO_HTTP_PORT}
+SOCKET_IO_HTTPS_PORT=
+MIX_SOCKET_IO_HTTPS_PORT=${SOCKET_IO_HTTPS_PORT}
+HTTPS_CERT_PATH=
+HTTPS_KEY_PATH=
+
 REQUEST_TOKEN_INTERVAL=60000
 WAITING_TOKEN_TIME=10000
+
+ALL_CHANNEL=all
+USER_CHANNEL_PREFIX=user:
+SYSTEM_CHANNEL=system
