--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     },
     "dependencies": {
         "dotenv": "^6.2.0",
+        "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "http": "0.0.0",
+        "https": "^1.0.0",
         "jsonwebtoken": "^8.4.0",
         "redis": "^2.8.0",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.3.0"
     }
 }
