--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "cross-env": "^5.2.1",
+        "jquery": "^3.4.1",
         "jquery-ui": "^1.12.1",
-        "laravel-mix": "^4.1.2",
+        "laravel-mix": "^4.1.4",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.19.0",
-        "sass-loader": "7.*",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.24.0",
+        "sass-loader": "^7.3.1",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "dotenv": "^6.2.0",
